Billing/k8s/9_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-ingress
  namespace: msusers-ns
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /billing/
        pathType: Prefix
        backend:
          service:
            name: billing
            port:
              number: 80
